# newsletter-service

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20220410064600_create_subscriptions_table.sql  20220523100947_make_status_not_null_in_subscriptions.sql  20220523101708_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription_confirm.rs  subscriptions.rs
